@@ -155,6 +155,23 @@ Assume that module
 is opened before parsing each of the
 following files.
 .TP
+.BI \-plugin \ plugin
+Dynamically load the code of the given
+.I plugin
+(a .cmo, .cma or .cmxs file) in 
+.BR ocamldep (1).
+The plugin must exist in
+the same kind of code as the tool (
+.BR ocamldep.byte 
+must load bytecode
+plugins, while 
+.BR ocamldep.opt
+must load native code plugins), and
+extension adaptation is done automatically for .cma files (to .cmxs files
+if 
+.BR ocamldep (1)
+is compiled in native code).
+.TP
 .BI \-pp \ command
 Cause
 .BR ocamldep (1)
